--- a/Christmas.html
+++ b/Christmas.html
@@ -2134,7 +2134,7 @@ new la({color:void 0!==b?b:16777215}))};k.WrapAroundEnding=2402;k.XHRLoader=func
 
     <div id="overlay">
       <ul>
-        <li class="title">To 肥汪卷：</li>
+        <li class="title">To 秋秋：</li>
         <li>
           <button class="btn" id="btnA" type="button">
             <!-- Merry Christmas  -->
@@ -2153,10 +2153,10 @@ new la({color:void 0!==b?b:16777215}))};k.WrapAroundEnding=2402;k.XHRLoader=func
     <script id="rendered-js">
       // 💗 ‼️ ‼️ 想要说的话在这里 💗
       const my_labels = [
-        "肥汪卷",
+        "秋秋宝贝",
         "Merry Christmas",
-        "一定要成为更好的人鸭",
-        "健健康康，平安喜乐",
+        "一定要成为更快乐的猪猪🐷",
+        "平平安安，快快乐乐",
       ];
       const { PI, sin, cos } = Math;
       const TAU = 2 * PI;
